--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-DB_Project/.classpath
-DB_Project/.project
-DB_Project/.settings/
-DB_Project/bin/
+/DB_Project/.classpath
+/DB_Project/.project
+/DB_Project/.settings/
+/DB_Project/bin/
 
